--- a/cal_app/View/Base.lproj/Main.storyboard
+++ b/cal_app/View/Base.lproj/Main.storyboard
@@ -122,25 +122,26 @@
                         <outlet property="WeightLabel" destination="gKz-6K-I8h" id="dVK-ur-6Iz"/>
                         <outlet property="heightslider" destination="5K4-Pm-qIK" id="BZ8-oY-jnM"/>
                         <outlet property="weightslider" destination="2gB-jM-wH3" id="UdB-Df-2E3"/>
+                        <segue destination="fHR-Oq-2kD" kind="presentation" identifier="gotoResult" id="gjo-yj-CFl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="28.037383177570092" y="69.330453563714912"/>
         </scene>
-        <!--View Controller-->
+        <!--Second View Controller-->
         <scene sceneID="hAk-mD-dpt">
             <objects>
-                <viewController id="fHR-Oq-2kD" sceneMemberID="viewController">
+                <viewController id="fHR-Oq-2kD" customClass="SecondViewController" customModule="cal_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QSi-5f-CMh">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="result_background" translatesAutoresizingMaskIntoConstraints="NO" id="a89-UL-iPi">
-                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jIt-KL-fH3">
-                                <rect key="frame" x="69" y="377.33333333333331" width="290.33333333333331" height="171.66666666666669"/>
+                                <rect key="frame" x="69" y="350.33333333333331" width="290.33333333333331" height="171.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR RESULT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y73-yQ-0Qi">
                                         <rect key="frame" x="0.0" y="0.0" width="290.33333333333331" height="30"/>
@@ -163,7 +164,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DD5-m2-5QM">
-                                <rect key="frame" x="20" y="841" width="388" height="51"/>
+                                <rect key="frame" x="20" y="787" width="388" height="51"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="51" id="m5T-u4-kAM"/>
@@ -173,6 +174,9 @@
                                 <state key="normal" title="RECALCULATE">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="recalculatePressed:" destination="fHR-Oq-2kD" eventType="touchUpInside" id="agL-2m-0rk"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="82P-Mx-Yvl"/>
@@ -189,6 +193,10 @@
                             <constraint firstItem="DD5-m2-5QM" firstAttribute="trailing" secondItem="QSi-5f-CMh" secondAttribute="trailingMargin" id="nve-RK-PNv"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="adviceLabel" destination="qwy-27-IEN" id="AYc-S4-GS1"/>
+                        <outlet property="bmiLable" destination="agQ-LZ-Jbo" id="gIs-5G-U6t"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mjQ-Tc-IcB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
