--- a/cal_app/View/Base.lproj/Main.storyboard
+++ b/cal_app/View/Base.lproj/Main.storyboard
@@ -129,19 +129,19 @@
             </objects>
             <point key="canvasLocation" x="28.037383177570092" y="69.330453563714912"/>
         </scene>
-        <!--Second View Controller-->
+        <!--Two View Controller-->
         <scene sceneID="hAk-mD-dpt">
             <objects>
-                <viewController id="fHR-Oq-2kD" customClass="SecondViewController" customModule="cal_app" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="fHR-Oq-2kD" customClass="TwoViewController" customModule="cal_app" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QSi-5f-CMh">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="result_background" translatesAutoresizingMaskIntoConstraints="NO" id="a89-UL-iPi">
-                                <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                                <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="jIt-KL-fH3">
-                                <rect key="frame" x="69" y="350.33333333333331" width="290.33333333333331" height="171.66666666666669"/>
+                                <rect key="frame" x="69" y="377.33333333333331" width="290.33333333333331" height="171.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR RESULT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y73-yQ-0Qi">
                                         <rect key="frame" x="0.0" y="0.0" width="290.33333333333331" height="30"/>
@@ -164,7 +164,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DD5-m2-5QM">
-                                <rect key="frame" x="20" y="787" width="388" height="51"/>
+                                <rect key="frame" x="20" y="841" width="388" height="51"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="51" id="m5T-u4-kAM"/>
@@ -174,8 +174,12 @@
                                 <state key="normal" title="RECALCULATE">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <buttonConfiguration key="configuration" style="plain" title="RECALCULATE">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="25"/>
+                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
                                 <connections>
-                                    <action selector="recalculatePressed:" destination="fHR-Oq-2kD" eventType="touchUpInside" id="agL-2m-0rk"/>
+                                    <action selector="BackBtn:" destination="fHR-Oq-2kD" eventType="touchUpInside" id="uwU-SW-ZNE"/>
                                 </connections>
                             </button>
                         </subviews>
