--- a/cal_app/View/Base.lproj/Main.storyboard
+++ b/cal_app/View/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="82P-Mx-Yvl"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
                         <constraints>
                             <constraint firstItem="DD5-m2-5QM" firstAttribute="bottom" secondItem="82P-Mx-Yvl" secondAttribute="bottom" id="8jB-se-CeC"/>
                             <constraint firstItem="jIt-KL-fH3" firstAttribute="centerY" secondItem="QSi-5f-CMh" secondAttribute="centerY" id="8lO-gH-TEW"/>
@@ -210,11 +210,11 @@
     <resources>
         <image name="calculate_background" width="375" height="812"/>
         <image name="result_background" width="375" height="812"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
